--- a/arch/arm/dts/iot-gate-imx8plus.dts
+++ b/arch/arm/dts/iot-gate-imx8plus.dts
@@ -9,4 +9,72 @@
 / {
 	model = "CompuLab IOT-GATE-IMX8PLUS";
 	compatible = "compulab,iot-gate-imx8plus", "compulab,ucm-imx8m-plus-som", "fsl,imx8mp";
+
+	tpm_nreset: tpm-nreset {
+		compatible = "regulator-fixed";
+		regulator-name = "tpm-rst";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		gpio = <&gpio3 20 GPIO_ACTIVE_HIGH>;
+		regulator-always-on;
+		enable-active-high;
+	};
+
 };
+
+&ecspi2 {
+
+	#address-cells = <1>;
+	#size-cells = <0>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_ecspi2>;
+	cs-gpios = <&gpio5 13 GPIO_ACTIVE_LOW>;
+	status = "okay";
+
+	slb9670: slb9670-ecspi2@0 {
+		compatible = "infineon,slb9670", "tcg,tpm_tis-spi";
+		reg = <0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_tpm_nrst>;
+		spi-max-frequency = <5000000>;
+		status = "okay";
+	};
+};
+
+&iomuxc {
+
+	pinctrl_tpm_nrst: tpmnrstgrp {
+		fsl,pins = <
+			MX8MP_IOMUXC_SAI5_RXC__GPIO3_IO20       0x19
+			>;
+	};
+
+	pinctrl_ecspi2: ecspi2grp {
+		fsl,pins = <
+			MX8MP_IOMUXC_ECSPI2_SCLK__ECSPI2_SCLK   0x82
+			MX8MP_IOMUXC_ECSPI2_MOSI__ECSPI2_MOSI   0x82
+			MX8MP_IOMUXC_ECSPI2_MISO__ECSPI2_MISO   0x82
+			MX8MP_IOMUXC_ECSPI2_SS0__GPIO5_IO13     0x40000
+			>;
+	};
+};
+
+&i2c5 {
+	status = "okay";
+
+	eeprom_m2: eeprom-i2c5@54 {
+		compatible = "atmel,24c08";
+		pagesize = <16>;
+		reg = <0x54>;
+		status = "okay";
+	};
+};
+
+&i2c6 {
+	status = "disabled";
+};
+
+&usdhc2 {
+	status = "disabled";
+};
+
