--- a/arch/arm/dts/iot-gate-imx8plus.dts
+++ b/arch/arm/dts/iot-gate-imx8plus.dts
@@ -36,7 +36,10 @@
 		reg = <0>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_tpm_nrst>;
+		reset-gpios = <&gpio4 28 GPIO_ACTIVE_LOW>;
 		spi-max-frequency = <5000000>;
+		tpm_event_log_addr = <0x40000000>;
+		tpm_event_log_size = <0x1000>;
 		status = "okay";
 	};
 };
